# SEPOLIA3

./: .gitignore  CMakeLists.txt  TODO.txt  fake_main.cpp
algebra/: algrebra.h  dot.cpp  dot.h  eigensystem.cpp  eigensystem.h  eigenvalues.cpp  eigenvalues.h  eigenvectors.cpp  eigenvectors.h  transpose.cpp  transpose.h  wrapper_blas.h
aux_functions/: aux_functions.cpp  aux_functions.h
containers/: containers.cpp  containers.h
dense_container/: dense_container.h  dense_container_algebra.h  dense_container_constructors.h  dense_container_declaration.cpp  dense_container_declaration.h  dense_container_memory.h  dense_container_operators.h  dense_container_parameters.h  dense_container_stl.h
dense_diagonalizers/: dense_diagonalizers.cpp  dense_diagonalizers.h  dense_eigensystem.h  eigensystem_dense.cpp  eigensystem_dense.h  parameters.h
dense_matrix/: dense_matrix.h  dense_matrix_algebra.h  dense_matrix_constructors.h  dense_matrix_declaration.h  dense_matrix_memory.h  dense_matrix_operators.h  dense_matrix_stl.h  matrix_dense.h  matrix_dense_algebra.h  matrix_dense_constructors.h  matrix_dense_declaration.h  matrix_dense_memory.h  matrix_dense_operators.h  matrix_dense_parameters.h  matrix_dense_stl.h
dense_vector/: dense_vector.h  dense_vector_constructors.h  dense_vector_declaration.h  dense_vector_operators.h  vector_dense.h  vector_dense_algebra.h  vector_dense_constructors.h  vector_dense_declaration.h  vector_dense_operators.h  vector_dense_parameters.h  vector_dense_stl.h
functions_aux/: functions_aux.cpp  functions_aux.h  overloaded_operators.cpp  (+1 more)
(+191 files in other folders)
